--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,10 @@
-[default]
+[scanner]
 masscan = /usr/bin/masscan
 rate = 1000
 ports = 21,22,23,80,81,82,88,89,90,99,138,139,443,445,8080,8089,8180,8181
 banners = false
+results = results
+scans = scans
+
+[api]
+port = 8998
